# matrizal

./: .gitignore  Cargo.toml  PKGBUILD  README.md  matrizal-0.1.0-1-x86_64.pkg.tar.zst  matrizal-Release.1.1.r7.g855b327-1-x86_64.pkg.tar.zst  matrizal-Release.1.1.r9.gc5a1c37-1-x86_64.pkg.tar.zst  matrizal-Release.1.r5.g22faedd-1-x86_64.pkg.tar.zst
pkg/matrizal/: .BUILDINFO  .MTREE  .PKGINFO
src/: bench.rs  main.rs  modules.rs  operations.rs
