[package]

name = "matrizal"
description = "A matrix calculator cli to do my homework"
version = "0.1.1"

edition = "2021"

authors = ["Az <zazaguichi@outlook.com>"]
repository = "https://github.com/Azakidev/matrizal"
readme = "README.md"
license-file = "LICENSE.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
matrix = "*"

[package.metadata.arch]
arch = ["x86_64"]
makedepends = ["cargo"]
packager = "Az"