[package]

name = "matrizal"
description = "A matrix calculator cli to do my homework"
version = "0.2.0"

edition = "2021"

authors = ["Az <zazaguichi@outlook.com>"]
repository = "https://github.com/Azakidev/matrizal"
readme = "README.md"

license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
matrix = "*"
crossterm = "0.25.0"

[package.metadata.arch]
arch = ["x86_64"]
makedepends = ["cargo"]
packager = "Az"